wtx-macros/tests/ui/error_enum/unknown_transport.stderr
error: Unknown transport.
 --> tests/ui/error_enum/unknown_transport.rs:1:59
  |
1 | #[wtx_macros::pkg(data_format(json), id(FooId), transport(dasdasd))]
  |                                                           ^^^^^^^
